--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
+    "ts-node": "ts-node --project tsconfig.json",
+    "server": "ts-node foo-server.ts",
     "foo": "ng serve --extra-webpack-config projects/learner/webpack.partial.js --project learner"
   },
   "private": true,
@@ -31,10 +33,14 @@
     "@angular/cli": "~8.0.0",
     "@angular/compiler-cli": "~8.0.0",
     "@angular/language-service": "~8.0.0",
+    "@types/express": "^4.17.0",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
     "codelyzer": "^5.0.0",
+    "express": "^4.17.1",
+    "express-http-proxy": "^1.5.1",
+    "express-request-proxy": "^2.2.2",
     "https-proxy-agent": "^2.2.1",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
@@ -45,7 +51,7 @@
     "karma-jasmine-html-reporter": "^1.4.0",
     "ng-packagr": "^5.1.0",
     "protractor": "~5.4.0",
-    "ts-node": "~7.0.0",
+    "ts-node": "^8.2.0",
     "tsickle": "^0.35.0",
     "tslint": "~5.15.0",
     "typescript": "~3.4.3",
