dump files to disk, serve files from server (not dev server), proxy requests to server through /Learner on dev server, but now we can still get WS for live reload via 4200 :thumbsup:

--- a/proxy.config.json
+++ b/proxy.config.json
@@ -1,7 +1,10 @@
 {
-  "/": {
-    "target": "http://localhost",
+  "/Learner": {
+    "target": "http://localhost:8000",
     "secure": false,
-    "logLevel": "debug"
+    "logLevel": "debug",
+    "pathRewrite": {
+      "^/Learner": ""
+    }
   }
 }
