--- a/angular.json
+++ b/angular.json
@@ -57,7 +57,8 @@
         "serve": {
           "builder": "ngx-build-plus:dev-server",
           "options": {
-            "browserTarget": "learner:build"
+            "browserTarget": "learner:build",
+            "proxyConfig": "proxy.config.json"
           },
           "configurations": {
             "production": {
