--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "~2.0.1",
     "karma-jasmine-html-reporter": "^1.4.0",
+    "morgan": "^1.9.1",
     "ng-packagr": "^5.1.0",
     "protractor": "~5.4.0",
     "ts-node": "^8.2.0",
