--- a/proxy.config.json
+++ b/proxy.config.json
@@ -1,10 +1,10 @@
 {
-  "/Learner": {
+  "/Spoke": {
     "target": "http://localhost:8000",
     "secure": false,
     "logLevel": "debug",
     "pathRewrite": {
-      "^/Learner": ""
+      "^/Spoke": ""
     }
   }
 }
