--- a/package.json
+++ b/package.json
@@ -4,14 +4,17 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
     "ts-node": "ts-node --project tsconfig.json",
     "server": "ts-node server.ts",
     "serve:learner": "ng serve --extra-webpack-config projects/learner/webpack.config.js --project learner",
-    "serve:admin": "ng serve --extra-webpack-config projects/admin/webpack.config.js --project admin"
+    "serve:admin": "ng serve --extra-webpack-config projects/admin/webpack.config.js --project admin",
+    "build:learner": "ng build --project learner --watch",
+    "build:admin": "ng build --project admin --watch",
+    "build": "yarn build:learner & yarn build:admin",
+    "serve": "browser-sync start --config ./bs-config.js"
   },
   "private": true,
   "dependencies": {
@@ -38,6 +41,7 @@
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
+    "browser-sync": "^2.26.7",
     "codelyzer": "^5.0.0",
     "express": "^4.17.1",
     "express-http-proxy": "^1.5.1",
