--- a/package.json
+++ b/package.json
@@ -3,14 +3,12 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "yarn serve & yarn build",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
     "ts-node": "ts-node --project tsconfig.json",
     "server": "ts-node server.ts",
-    "serve:learner": "ng serve --extra-webpack-config projects/learner/webpack.config.js --project learner",
-    "serve:admin": "ng serve --extra-webpack-config projects/admin/webpack.config.js --project admin",
     "build:learner": "ng build --project learner --watch",
     "build:admin": "ng build --project admin --watch",
     "build": "yarn build:learner & yarn build:admin",
@@ -26,7 +24,6 @@
     "@angular/platform-browser": "~8.0.0",
     "@angular/platform-browser-dynamic": "~8.0.0",
     "@angular/router": "~8.0.0",
-    "ngx-build-plus": "^8.0.3",
     "rxjs": "~6.4.0",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
@@ -38,15 +35,10 @@
     "@angular/compiler-cli": "~8.0.0",
     "@angular/language-service": "~8.0.0",
     "@types/express": "^4.17.0",
-    "@types/jasmine": "~3.3.8",
-    "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
     "browser-sync": "^2.26.7",
     "codelyzer": "^5.0.0",
     "express": "^4.17.1",
-    "express-http-proxy": "^1.5.1",
-    "express-request-proxy": "^2.2.2",
-    "https-proxy-agent": "^2.2.1",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~4.1.0",
@@ -55,12 +47,10 @@
     "karma-jasmine": "~2.0.1",
     "karma-jasmine-html-reporter": "^1.4.0",
     "morgan": "^1.9.1",
-    "ng-packagr": "^5.1.0",
     "protractor": "~5.4.0",
     "ts-node": "^8.2.0",
     "tsickle": "^0.35.0",
     "tslint": "~5.15.0",
-    "typescript": "~3.4.3",
-    "write-file-webpack-plugin": "^4.5.0"
+    "typescript": "~3.4.3"
   }
 }
