--- a/package.json
+++ b/package.json
@@ -2,19 +2,19 @@
   "name": "ng-workspace",
   "version": "0.0.0",
   "scripts": {
-    "ng": "ng",
-    "start": "yarn serve & yarn build",
-    "test": "ng test",
-    "lint": "ng lint",
-    "e2e": "ng e2e",
-    "ts-node": "ts-node --project tsconfig.json",
-    "server": "ts-node server.ts",
-    "build:learner": "ng build --project learner --watch",
-    "build:admin": "ng build --project admin --watch",
-    "build": "yarn build:learner & yarn build:admin",
-    "serve": "browser-sync start --config ./bs-config.js"
+    "start": "yarn serve & yarn watch",
+    "server": "ts-node --project tsconfig.json server.ts",
+    "learner:build": "ng build --project learner",
+    "learner:watch": "yarn learner:build --watch",
+    "admin:build": "ng build --project admin",
+    "admin:watch": "yarn admin:build --watch",
+    "marvel:build": "yarn templatecache:build && ng build --project marvel",
+    "marvel:watch": "yarn templatecache:watch & ng build --project marvel --watch",
+    "serve": "browser-sync start --config ./bs-config.js",
+    "templatecache:build": "gulp templatecache:build",
+    "templatecache:watch": "gulp templatecache:watch",
+    "watch": "yarn learner:watch & yarn admin:watch & yarn marvel:watch"
   },
-  "private": true,
   "dependencies": {
     "@angular/animations": "~8.0.0",
     "@angular/common": "~8.0.0",
@@ -24,30 +24,40 @@
     "@angular/platform-browser": "~8.0.0",
     "@angular/platform-browser-dynamic": "~8.0.0",
     "@angular/router": "~8.0.0",
-    "rxjs": "~6.4.0",
+    "angular": "1.7.8",
+    "angular-animate": "1.7.8",
+    "angular-aria": "1.7.8",
+    "angular-material": "1.1.11",
+    "angular-messages": "1.7.8",
+    "angular-mocks": "1.7.8",
+    "angular-resource": "1.7.8",
+    "angular-sanitize": "1.7.8",
+    "angular-ui-router": "0.4.2",
+    "components-font-awesome": "4.6.3",
+    "jquery": "3.3.1",
+    "rxjs": "6.4.0",
+    "toastr": "2.1.4",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.800.0",
-    "@angular-devkit/build-ng-packagr": "^0.800.1",
     "@angular/cli": "~8.0.0",
     "@angular/compiler-cli": "~8.0.0",
     "@angular/language-service": "~8.0.0",
+    "@types/angular": "^1.6.55",
     "@types/express": "^4.17.0",
     "@types/node": "~8.9.4",
     "browser-sync": "^2.26.7",
     "codelyzer": "^5.0.0",
     "express": "^4.17.1",
-    "jasmine-core": "~3.4.0",
-    "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~4.1.0",
-    "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "~2.0.1",
-    "karma-jasmine": "~2.0.1",
-    "karma-jasmine-html-reporter": "^1.4.0",
+    "gulp": "3.9.1",
+    "gulp-angular-templatecache": "2.2.0",
+    "gulp-htmlmin": "4.0.0",
+    "gulp-load-plugins": "1.5.0",
+    "gulp-ng-annotate": "2.1.0",
+    "gulp-watch": "5.0.0",
     "morgan": "^1.9.1",
-    "protractor": "~5.4.0",
     "ts-node": "^8.2.0",
     "tsickle": "^0.35.0",
     "tslint": "~5.15.0",
