successfully import a shared module and inject the service

--- a/projects/marvel/tsconfig.app.json
+++ b/projects/marvel/tsconfig.app.json
@@ -3,9 +3,9 @@
   "compilerOptions": {
     "outDir": "../../out-tsc/app",
     "types": []
-  }
-  ,
+  },
   "include": [
-    "**/*.ts"
+    "**/*.ts",
+    "../common/**/*.ts"
   ]
 }
