--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,9 @@
     "lib": [
       "es2018",
       "dom"
-    ]
+    ],
+    "paths": {
+      "@common/*": ["projects/common/*"]
+    }
   }
 }
