use project-specific gulp files

--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "learner:watch": "yarn learner:build --watch",
     "admin:build": "ng build --project admin",
     "admin:watch": "yarn admin:build --watch",
-    "marvel:build": "yarn templatecache:build && ng build --project marvel",
-    "marvel:watch": "yarn templatecache:watch & ng build --project marvel --watch",
+    "marvel:build": "gulp templatecache:build --gulpfile projects/marvel/gulpfile.js && ng build --project marvel",
+    "marvel:watch": "gulp templatecache:watch --gulpfile projects/marvel/gulpfile.js & ng build --project marvel --watch",
     "serve": "browser-sync start --config ./bs-config.js",
     "templatecache:build": "gulp templatecache:build",
     "templatecache:watch": "gulp templatecache:watch",
