--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
     "learner:watch": "yarn learner:build --watch",
     "admin:build": "ng build --project admin",
     "admin:watch": "yarn admin:build --watch",
-    "marvel:build": "gulp templatecache:build --gulpfile projects/marvel/gulpfile.js && ng build --project marvel",
-    "marvel:watch": "gulp templatecache:watch --gulpfile projects/marvel/gulpfile.js & ng build --project marvel --watch",
+    "marvel:build": "yarn common-templates:build && gulp templatecache:build --gulpfile projects/marvel/gulpfile.js && ng build --project marvel",
+    "marvel:watch": "yarn common-templates:watch & gulp templatecache:watch --gulpfile projects/marvel/gulpfile.js & ng build --project marvel --watch",
     "serve": "browser-sync start --config ./bs-config.js",
-    "templatecache:build": "gulp templatecache:build",
-    "templatecache:watch": "gulp templatecache:watch",
+    "common-templates:build": "gulp templatecache:build --gulpfile projects/common/gulpfile.js",
+    "common-templates:watch": "gulp templatecache:watch --gulpfile projects/common/gulpfile.js",
     "watch": "yarn learner:watch & yarn admin:watch & yarn marvel:watch"
   },
   "dependencies": {
